# wro-2019-robotClient

./: .gitignore  .gitmodules  CMakeLists.txt  Speaker.hpp  arduino.hpp  commandProcessing.hpp  dataCollection.hpp  dataCollector.hpp  dict.dic  gram.jsgf  kws.kwlist  main.cpp  new.dic  steppers.hpp  utils.hpp
data/: en.dic  en.jsgf  en.kwlist  ru.dic  ru.jsgf  ru.kwlist
